--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "my-project"
+name = "adventure"
 version = "0.1.0"
 authors = ["runner"]
 edition = "2021"
@@ -8,4 +8,4 @@ edition = "2021"
 
 [dependencies]
 nom = "^7.1.0"
-specs = "^0.17.0"
+specs = { version = "^0.17.0", features = ["specs-derive"] }
